--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -13,18 +13,28 @@
     flex-direction: column;
     align-items: center;
   }
+  /*Each column is 50% wide, anything more will break off to next line with flex-wrap */
   .col{
-    flex: 1;
+    flex: 1 50%;
   }
-
+  .row{
+    flex-wrap: wrap;
+  }
 }
 
 @media (min-width: 1025px) {
     .main-header{
       flex-direction: row;
       justify-content: space-between;
+    }  
+    /*Space is no longer distributed */
+    .col{
+      flex-basis: 0;
     }
-    .primary.col{
-      flex: 2;
+    .primary{
+      flex-grow: 1.4;
+    }
+    .secondary{
+      order: -1;
     }
 }
