--- a/css/base.css
+++ b/css/base.css
@@ -101,6 +101,13 @@ img {
 .feat-img {
 	border-radius: 5px;
 }
+.button {
+	color: #fff;
+	text-align: center;
+	padding: .625em 1.25em;
+	background: #3acec2;
+	border-radius: .35em;
+}
 
 /* ================================= 
   Media Queries
