--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -5,7 +5,8 @@
 @media (min-width: 768px) {
   .main-header,
   .main-nav,
-  .row{
+  .row,
+  .col{
     display: flex;
   }
 
@@ -16,9 +17,13 @@
   /*Each column is 50% wide, anything more will break off to next line with flex-wrap */
   .col{
     flex: 1 50%;
+    flex-direction: column;
   }
   .row{
     flex-wrap: wrap;
+  }
+  .button{
+    margin-top: auto;
   }
 }
 
