--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -6,7 +6,8 @@
   .main-header,
   .main-nav,
   .row,
-  .col{
+  .col,
+  body{
     display: flex;
   }
 
@@ -15,6 +16,10 @@
     align-items: center;
   }
   /*Each column is 50% wide, anything more will break off to next line with flex-wrap */
+  .col,
+  body{
+    flex-direction: column;
+  }  
   .col{
     flex: 1 50%;
     flex-direction: column;
@@ -24,6 +29,13 @@
   }
   .button{
     margin-top: auto;
+  }
+  body{
+    min-height: 100vh;
+  }
+  .main-footer{
+    position: sticky;
+    margin-top: -20;
   }
 }
 
